--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/IryCode">IryCode</a>.
+        >. Coded by <a href="https://github.com/IryDev">IryDev</a>.
       </p>
     </footer>
   </body>
